--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="">
   <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>MeLFusion: Synthesizing Music from Image and Language Cues using Diffusion Models</title>
+  <title>AVTrustBench: Assessing and Enhancing Reliability and Robustness in Audio-Visual LLMs</title>
 	
  
   <script type="text/x-mathjax-config">
@@ -110,18 +110,18 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">MeLFusion: Synthesizing Music from Image and Language Cues using Diffusion Models</h1>
-		<h1 style="font-size:2vw"><font color="#ff0000"> <b> CVPR 2024 [Highlight, Top 2.8%] </b> </font></h1> <br>
+          <h1 class="title is-1 publication-title">AVTrustBench: Assessing and Enhancing Reliability and Robustness in Audio-Visual LLMs</h1>
+		<h1 style="font-size:2vw"><font color="#ff0000"> <b>  </b> </font></h1> <br>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://schowdhury671.github.io/">Sanjoy Chowdhury</a><sup>*1,3</sup>,</span>
             <span class="author-block">
               <a href="https://sayannag.github.io/">Sayan Nag</a><sup>*2,3</sup>,</span>
             <span class="author-block">
-              <a href="https://josephkj.in/">Joseph K J</a><sup>3</sup>,
+              <a href=""></a><sup>3</sup>,
             </span>
             <span class="author-block">
-              <a href="https://research.adobe.com/person/balaji-vasan-srinivasan/">Balaji Vasan Srinivasan</a><sup>3</sup>,
+              <a href=""></a><sup>3</sup>,
             </span>
 			<span class="author-block">
               <a href="https://www.cs.umd.edu/people/dmanocha/">Dinesh Manocha</a><sup>1</sup>
