Added AVTrustBench content

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">AVTrustBench: Assessing and Enhancing Reliability and Robustness in Audio-Visual LLMs</h1>
+          <h1 style="font-size:2vw"><font color="#ff0000"> <b> ICCV 2025 </b> </font></h1> <br>
 		<h1 style="font-size:2vw"><font color="#ff0000"> <b>  </b> </font></h1> <br>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
