Source code for AURA project webpage

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="">
   <meta name="keywords" content="Nerfies, D-NeRF, NeRF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AVTrustBench: Assessing and Enhancing Reliability and Robustness in Audio-Visual LLMs</title>
+  <title>AURA: A Fine-Grained Benchmark and Decomposed Metric for Audio-Visual Reasoning</title>
 	
  
   <script type="text/x-mathjax-config">
@@ -110,28 +110,22 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">AVTrustBench: Assessing and Enhancing Reliability and Robustness in Audio-Visual LLMs</h1>
-          <h1 style="font-size:2vw"><font color="#ff0000"> <b> ICCV 2025 </b> </font></h1> <br>
+          <h1 class="title is-1 publication-title">AURA: A Fine-Grained Benchmark and Decomposed Metric for Audio-Visual Reasoning</h1>
+          <h1 style="font-size:2vw"><font color="#ff0000"> <b> AAAI 2026 </b> </font></h1> <br>
 		<h1 style="font-size:2vw"><font color="#ff0000"> <b>  </b> </font></h1> <br>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://schowdhury671.github.io/">Sanjoy Chowdhury</a><sup>*1,3</sup>,</span>
+              <a href="#">Siminfar Samakoush Galougah</a><sup>*1</sup>,</span>
             <span class="author-block">
-              <a href="https://sayannag.github.io/">Sayan Nag</a><sup>*2,3</sup>,</span>
+              <a href="https://www.linkedin.com/in/rishieraj/">Rishie Raj</a><sup>*1</sup>,</span>
             <span class="author-block">
-              <a href="https://subhrajyotidasgupta.github.io/">Subhrajyoti Dasgupta</a><sup>4</sup>,
+              <a href="https://schowdhury671.github.io/">Sanjoy Chowdhury</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="#">Yaoting Wang</a><sup>5</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://www.mohamed-elhoseiny.com/">Mohamed Elhoseiny</a><sup>5</sup>,
-            </span>
-            <span class="author-block">
-              <a href="https://ruohangao.github.io/">Ruohan Gao</a><sup>1</sup>,
+              <a href="https://sayannag.github.io/">Sayan Nag</a><sup>2,3</sup>,
             </span>
 			      <span class="author-block">
-              <a href="https://www.cs.umd.edu/people/dmanocha/">Dinesh Manocha</a><sup>1</sup>
+              <a href="https://users.umiacs.umd.edu/~ramanid/">Ramani Duraiswami</a><sup>1</sup>
             </span>
           </div>
 
@@ -139,8 +133,6 @@
             <span class="author-block"><sup>1</sup>University of Maryland,</span>
             <span class="author-block"><sup>2</sup>University of Toronto,</span>
 			      <span class="author-block"><sup>3</sup>Adobe Research,</span>
-            <span class="author-block"><sup>4</sup>Mila and Université de Montréal,</span>
-            <span class="author-block"><sup>5</sup>KAUST</span>
           </div>
 
           <div class="column has-text-centered">
@@ -157,7 +149,7 @@
                 </a>
               </span> -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2501.02135"
+                <a href="#"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -177,7 +169,7 @@
               </span> -->
 			        <!--  Link. -->
               <span class="link-block">
-                <a href="https://umd0-my.sharepoint.com/:f:/g/personal/sanjoyc_umd_edu/Eokp3KD2UvxAgiCPtXePyXIBEVpbYtgOSnXcTvQWcSgLYQ?e=syRnKf"
+                <a href="#"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fa fa-database"></i>
@@ -187,7 +179,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/schowdhury671/avtrustbench-"
+                <a href="#"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -225,8 +217,8 @@
 		<center>
         <div class="content has-text-justified" style='width:750px'>
           <p>
-            We introduce AVTrustBench as a comprehensive 600K-sample benchmark evaluating AVLLMs on adversarial attacks, compositional reasoning, and modality-specific dependencies.
-            We further propose a new model-agnostic calibrated audio-visual preference optimization-based training strategy, CAVPref, that improves performance of existing AVLLMs by up to 30.19%.
+            We introduce AURA, a benchmark that forces models to reason using both audio and video, and AuraScore, a metric that evaluates if this reasoning is factually and logically sound.
+            Our findings reveal a major "reasoning gap" in even the best models, which achieve high accuracy (~92%) but fail on our reasoning evaluation (~45%).
           </p>
         </div>
 		</center>
@@ -245,11 +237,10 @@
       <img src="./static/images/teaser.png"
                  class="interpolation-image" width=80%/></center>
       <p class="content has-text-justified">
-		We present AVTrustBench, a new benchmark comprising three challenging
-yet unexplored axes, i.e., Adversarial Attack, Compositional Reasoning, and Modality Dependency, and evaluate SOTA Audio-Visual
-LLMs (AVLLMs) on this benchmark. We observe that these models demonstrate poor performances under these settings. To alleviate these
-limitations, we propose a novel AVLLM-agnostic preference optimization strategy CAVPref, which substantially improves the reliability
-and robustness of these models over existing solutions such as DPO. [Representative Model: VideoLlama-2.]
+        We present AURA, the first question-answering (QA) benchmark designed to evaluate state-
+        of-the-art Audio-Visual Large Language Models (AV-LLMs) and Omni-Modal Language Models (OLMs) on fine-grained
+        cognitive tasks, including Cross-Modal Causal Reasoning, Timbre/Pitch Reasoning, Tempo/AV Synchronization Analysis,
+        Unanswerability, Implicit Distractions, and Performer Skill Profiling.
       </p>
     </div>
   </div>
@@ -265,22 +256,20 @@ and robustness of these models over existing solutions such as DPO. [Representat
     <center>
         <div class="hero-body">
           <p class="content has-text-justified">
-			With the rapid advancement of Multi-modal Large Language Models (MLLMs), several diagnostic benchmarks
-have recently been developed to assess these models’ multimodal reasoning proficiency. However, these benchmarks
-are restricted to assessing primarily the visual aspect and
-do not examine the holistic audio-visual (AV) understanding.
-Moreover, currently, there are no benchmarks that investigate the capabilities of AVLLMs to calibrate their responses
-when presented with perturbed inputs. To this end, we introduce Audio-Visual Trustworthiness assessment Benchmark
-(AVTrustBench), comprising 600K samples spanning
-over 9 meticulously crafted tasks, evaluating the capabilities
-of AVLLMs across three distinct dimensions: Adversarial
-attack, Compositional reasoning, and Modality-specific dependency. Using our benchmark, we extensively evaluate 13
-state-of-the-art AVLLMs. The findings reveal that the majority of existing models fall significantly short of achieving
-human-like comprehension, offering valuable insights for
-future research directions. To alleviate the limitations in the
-existing approaches, we further propose a robust, modelagnostic calibrated audio-visual preference optimizationbased training strategy CAVPref, obtaining a gain up to
-30.19% across all 9 tasks. 
-		  </p>
+            Current audio-visual (AV) benchmarks focus on final answer accuracy, overlooking the underlying reasoning process.
+            This makes it difficult to distinguish genuine comprehension from correct answers derived through fallacies or hallucinations.
+            To address this, we introduce <i>AURA</i> (Audio-visual Understanding and Reasoning Assessment), a benchmark for evaluating the cross-modal
+            reasoning capabilities of Audio-Visual Large Language Models (AV-LLMs) and Omni-modal Language Models (OLMs).
+            AURA includes questions across six challenging cognitive domains, such as causality, timbre and pitch, tempo and AV synchronization,
+            unanswerability, implicit distractions, and skill profiling, explicitly designed to be unanswerable from a single modality.
+            This forces models to construct a valid logical path grounded in both audio and video, setting AURA apart from AV datasets that
+            allow uni-modal shortcuts. To assess reasoning traces, we propose a novel metric, <i>AuraScore</i>, which addresses the lack of robust tools
+            for evaluating reasoning fidelity. It decomposes reasoning into two aspects: (i) Factual Consistency - whether reasoning is grounded
+            in perceptual evidence, and (ii) Core Inference - the logical validity of each reasoning step. Evaluations of SOTA models on AURA reveal
+            a critical reasoning gap: although models achieve high accuracy (up to 92% on some tasks), their Factual Consistency and
+            Core Inference scores fall below 45%. This discrepancy highlights that models often arrive at correct answers through flawed logic,
+            underscoring the need for our benchmark and paving the way for more robust multimodal evaluation.
+		      </p>
         </div>
     </center>
       </div>
@@ -292,7 +281,7 @@ existing approaches, we further propose a robust, modelagnostic calibrated audio
 <section class="columns is-vcentered interpolation-panel" width=100%>
   <div class="container is-max-desktop" >
     <div class="hero-body" style='margin-top:-25px;margin-bottom:-25px'>
-    <center><h2 class="title is-3">AVTrustBench Statistics and AVLLMs Leaderboard</h2></center><br>
+    <center><h2 class="title is-3">AURA Benchmark Statistics</h2></center><br>
 
     <div class="columns is-centered">
 
@@ -300,10 +289,11 @@ existing approaches, we further propose a robust, modelagnostic calibrated audio
       <div class="column" >
         <div class="content">
           <!-- <center><h1 style="font-size: 25px; color:brown" " class="title is-3"></h1></center> -->
-          <img src="static/images/data_pie_leaderboard.png" height=100%/>
+          <img src="static/images/data_stats.png" height=100%/>
           <p class="content has-text-justified">
-          <b>AVTRUSTBENCH statistics and AVLLMs leaderboard.</b> (Left) Task-wise data distribution. Our benchmark comprises 9 diverse
-tasks spanning over 3 dimensions. (Right) Performance comparison on AVTRUSTBENCH. Values represent dimension-wise averages.
+            <b>Dataset statistics of AURA.</b> The plots in the above figure showcase the details of the data distribution in AURA.
+            (a) The number of MCQ-questions in each QA/task category. (b) Percentage distribution of video samples in the dataset based on their duration.
+            (c) Contribution of video samples to the dataset based on their source of origin.
           </p>
         </div>
       </div>
@@ -314,7 +304,7 @@ tasks spanning over 3 dimensions. (Right) Performance comparison on AVTRUSTBENCH
 
 <section class="section">
   <div class="container is-max-desktop" >
-    <center><h2 class="title is-3">AVTrustBench Task Examples</h2></center><br>
+    <center><h2 class="title is-3">Automatic QA Generation Pipeline</h2></center><br>
 
     <div class="columns is-centered">
 
@@ -322,61 +312,11 @@ tasks spanning over 3 dimensions. (Right) Performance comparison on AVTRUSTBENCH
       <div class="column" >
         <div class="content">
           <!-- <center><h1 style="font-size: 25px; color:brown" " class="title is-3"></h1></center> -->
-          <img src="static/images/task_diag.png" height=100%/>
+          <img src="static/images/data_pipeline.png" height=100%/>
           <p class="content has-text-justified">
-            <b>Task definitions:</b> AVTrustBench comprises a total of 9 tasks tasks MCIT, ICIT, MVIT and MAIT from Adversarial Attack,
-COT-Stitch, COT-Swap and CAT from Compositional Reasoning and MAT and MVT from Modality-specific Dependency respectively. The
-goal of each dimension is to critically assess the robustness of existing AVLLMs under different modes of challenges. In each case, the
-AVLLMs are presented with a multiple-choice question setup. Refer to Sec. 3.1 in the paper for task-specific details.
-          </p>
-        </div>
-      </div>
-    </div>
-
-  </div>
-</section>
-
-
-<section class="columns is-vcentered interpolation-panel" width=100%>
-  <div class="container is-max-desktop" >
-    <div class="hero-body" style='margin-top:-25px;margin-bottom:-25px'>
-    <center><h2 class="title is-3">Zero-shot Qualitative Results</h2></center><br>
-
-    <div class="columns is-centered">
-
-      <!-- Visual Effects. -->
-      <div class="column" >
-        <div class="content">
-          <!-- <center><h1 style="font-size: 25px; color:brown" " class="title is-3"></h1></center> -->
-          <img src="static/images/qual_main_paper_zs.png" height=100%/>
-          <p class="content has-text-justified">
-            <b>Qualitative results:</b> We report top 8 models’ performance on three representative tasks MCIT, COT-Swap and MAT. GPT-4o
-consistently outperforms open-source models. Under instruction setting we append the phrase “If the correct answer is not
-present respond with None of the above”. More qualitative results can be found in the supplementary.
-          </p>
-        </div>
-      </div>
-    </div>
-
-  </div>
-</section>
-
-<section class="section">
-  <div class="container is-max-desktop" >
-    <center><h2 class="title is-3">CAVPref Architecture</h2></center><br>
-
-    <div class="columns is-centered">
-
-      <!-- Visual Effects. -->
-      <div class="column" >
-        <div class="content">
-          <!-- <center><h1 style="font-size: 25px; color:brown" " class="title is-3"></h1></center> -->
-          <img src="static/images/mitigation_avllm.png" height=20%/>
-          <p class="content has-text-justified">
-            <b>Overview of CAVPref:</b> We formulate a distributionally
-robust AV preferential optimization objective to incorporate the
-multi-modal relationships across different modalities and counter
-the tailing effect across diverse categories in the dataset.
+            <b>Qualitative results:</b> We report top 8 models’ performance on three representative tasks MCIT, COT-Swap and MAT.
+            GPT-4o consistently outperforms open-source models. Under instruction setting we append the phrase “If the correct answer is not
+            present respond with None of the above”. More qualitative results can be found in the supplementary.
           </p>
         </div>
       </div>
@@ -388,7 +328,7 @@ the tailing effect across diverse categories in the dataset.
 <section class="columns is-vcentered interpolation-panel" width=100%>
   <div class="container is-max-desktop" >
     <div class="hero-body" style='margin-top:-25px;margin-bottom:-25px'>
-    <center><h2 class="title is-3">Task-wise Leaderboards</h2></center><br>
+    <center><h2 class="title is-3">Quantitative Results</h2></center><br>
 
     <div class="columns is-centered">
 
@@ -396,9 +336,11 @@ the tailing effect across diverse categories in the dataset.
       <div class="column" >
         <div class="content">
           <!-- <center><h1 style="font-size: 25px; color:brown" " class="title is-3"></h1></center> -->
-          <img src="static/images/full_leaderboard.png" height=100%/>
-          <p class="content has-text-centered">
-            Leaderboards for zero-shot evaluation on 9 different tasks in AVTRUSTBENCH.
+          <img src="static/images/eval_results.png" height=100%/>
+          <p class="content has-text-justified">
+            <b>Evaluation Scores for Omnimodal LLMs.</b> Our proposed AuraScore, consisting of ACC(Accuracy), FCS (Factual Consistency Score),
+            CIS (Core Inference Score), provides insight into the performance of the SOTA Models across multiple tasks in AURA.
+            Closed source models are at the bottom.
           </p>
         </div>
       </div>
@@ -406,7 +348,6 @@ the tailing effect across diverse categories in the dataset.
 
   </div>
 </section>
-    
 
 <section class="section">
   <div class="container is-max-desktop" >
@@ -418,17 +359,11 @@ the tailing effect across diverse categories in the dataset.
       <div class="column" >
         <div class="content">
           <!-- <center><h1 style="font-size: 25px; color:brown" " class="title is-3"></h1></center> -->
-          <img src="static/images/mcit_supp_new.png" height=100%/>
-          <img src="static/images/icit_supp_new.png" height=100%/>
-          <img src="static/images/mvit_supp_new.png" height=100%/>
-          <img src="static/images/mait_supp_new.png" height=100%/>
-          <img src="static/images/mvt_supp_new.png" height=100%/>
-          <img src="static/images/mat_supp_new.png" height=100%/>
-          <img src="static/images/cot_stitch_supp_new.png" height=100%/>
-          <img src="static/images/cot_swap_supp_new.png" height=100%/>
-          <img src="static/images/cat_supp_new.png" height=100%/>
-          <p class="content has-text-centered">
-            Qualitative results on the 9 AVTrustBench tasks - MCIT, ICIT, MVIT, MAIT, MVT, MAT, COT-Stitch, COT-Swap and CAT.
+          <img src="static/images/qual_exp_1.png" height=100%/>
+          <img src="static/images/qual_exp_2.png" height=100%/>
+          <img src="static/images/qual_exp_3.png" height=100%/>
+          <p class="content has-text-justified">
+            <b>Qualitative results on tasks.</b> We show several qualitative results on our six different tasks, CR, TPR, TSA, UANS, ID and PSP. 
           </p>
         </div>
       </div>
@@ -441,26 +376,19 @@ the tailing effect across diverse categories in the dataset.
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content" style="margin-top:0px">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{chowdhury2025avtrustbench,
+    <pre><code>
+      <!-- @article{chowdhury2025avtrustbench,
   title={AVTrustBench: Assessing and Enhancing Reliability and Robustness in Audio-Visual LLMs},
   author={Chowdhury, Sanjoy and Nag, Sayan and Dasgupta, Subhrajyoti and Wang, Yaoting and Elhoseiny, Mohamed and Gao, Ruohan and Manocha, Dinesh},
   journal={arXiv preprint arXiv:2501.02135},
   year={2025}
-}
+} -->
 </code></pre>
   </div>
 </section>
 
-<!--<section class="section" id="BibTeX">
-  <div class="container is-max-desktop content" style="margin-top:-70px">
-    <h2 class="title">Acknowledgement</h2>
-TODO
-</code></pre>
-  </div>
-</section>-->
 
-
-<!-- <footer class="footer">
+<footer class="footer">
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-8">
@@ -478,7 +406,7 @@ TODO
       </div>
     </div>
   </div>
-</footer> -->
+</footer>
 
 </body>
 </html>
