Adding links for dataset and github repo

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               </span> -->
 			        <!--  Link. -->
               <span class="link-block">
-                <a href="#"
+                <a href="https://drive.google.com/drive/folders/1ua93_3XyDAZZ6arGQij7OqAZR3UO5pZW?usp=drive_link"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fa fa-database"></i>
@@ -178,7 +178,7 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="#"
+                <a href="https://github.com/rishieraj/aura.git"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
