Adding arxiv paper link

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 </a>
               </span> -->
               <span class="link-block">
-                <a href="#"
+                <a href="http://arxiv.org/abs/2508.07470"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
